Fixed z-index.

--- a/src/input.css
+++ b/src/input.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .tooltip {
-    @apply bg-darkBrown text-cream text-sm font-bold opacity-0 group-hover:opacity-100 flex justify-center items-center rounded py-1 px-2 transition-all duration-300 ease-in-out absolute left-1/2 -top-2 -translate-x-1/2 -translate-y-full;
+    @apply bg-darkBrown text-cream text-sm font-bold opacity-0 group-hover:opacity-100 flex justify-center items-center rounded py-1 px-2 transition-all duration-300 ease-in-out absolute left-1/2 -top-2 -translate-x-1/2 -translate-y-full z-10;
   }
 
   .chartCol {
